--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,14 @@
 [user]
 	email = abdallahmehiz0@gmail.com
 	signingkey = C20F096DC8DF7C7AF9A59AD1975266399F5BAF34
+	name = Abdallah Mehiz
 [commit]
 	gpgsign = true
 [safe]
 	directory = *
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
