update and add mpv

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 monitor=,preferred,auto,auto
 exec-once = waybar & hyprpaper
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = wl-paste --watch cliphist store
 
 env = XCURSOR_SIZE,24
 
@@ -31,10 +33,6 @@ general {
 
 decoration {
     rounding = 0
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
 
     drop_shadow = no
 }
@@ -69,11 +67,19 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
+misc {
+  disable_hyprland_logo = true
+  disable_splash_rendering = true
+  enable_swallow = true
+  swallow_regex = ^(kitty)$
+}
+
 $mainMod = SUPER
 
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
 bind = $mainMod SHIFT, C, exec, hyprpicker --autocopy -f hex
+bind = SUPER, X, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, F, fullscreen
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
