--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -83,9 +83,9 @@ bind = SUPER, X, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, F, fullscreen
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
 
