--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,10 +6,10 @@ exec-once = wl-paste --watch cliphist store
 env = XCURSOR_SIZE,24
 
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us, ara
+    kb_variant = 
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -77,17 +77,20 @@ misc {
 $mainMod = SUPER
 
 bind = $mainMod, Q, exec, kitty
+
 bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
+bind = , Print, exec, hyprshot -m output -o ~/Pictures/Screenshots/
 bind = $mainMod SHIFT, C, exec, hyprpicker --autocopy -f hex
 bind = SUPER, X, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, F, fullscreen
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, C, killactive 
+bind = $mainMod, M, exit
+bind = $mainMod,f1, exec, hyprctl kill
 bind = $mainMod, E, exec, thunar
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, V, togglefloating
 bind = $mainMod, R, exec, rofi -show drun
-bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
+bind = $mainMod, P, pseudo
+bind = $mainMod, J, togglesplit
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -115,9 +118,6 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
