update the dot files ig?

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,8 +1,10 @@
 # # General Settings
 save-position-on-quit = yes
 keep-open = always
-hwdec = auto
+# hwdec = auto
 osc = no
+# video-aspect-override=16/9
+
 # Screenshots
 screenshot-format = png
 screenshot-template = ~/Pictures/MPV/%F-%P-%02n
@@ -19,3 +21,4 @@ alang = jpn,eng
 cover-art-auto = all # cause most of the time you'll find only one cover art in the folder
 audio-display = embedded-first
 
+sub-fonts-dir=~/.config/mpv/fonts/
