--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,6 @@
-monitor=,preferred,auto,auto
-exec-once = waybar & hyprpaper
+monitor=eDP-1,preferred,1366x0,1
+monitor=DP-1,1360x768@60,0x0, 1
+ exec-once = hyprpaper & waybar
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
 
@@ -18,8 +19,11 @@ input {
         natural_scroll = yes
     }
 
-    sensitivity = 0
+    sensitivity = -0.5
 }
+
+# xwayland red border of shame
+windowrulev2=bordercolor rgb(ff0000),xwayland:1
 
 general {
     gaps_in = 5
@@ -63,9 +67,6 @@ gestures {
     workspace_swipe = off
 }
 
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
 
 misc {
   disable_hyprland_logo = true
@@ -79,16 +80,17 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, kitty
 
 bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
-bind = , Print, exec, hyprshot -m output -o ~/Pictures/Screenshots/
+bind = , Print, exec, hyprshot -m output --current -o ~/Pictures/Screenshots/
 bind = $mainMod SHIFT, C, exec, hyprpicker --autocopy -f hex
 bind = SUPER, X, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = SUPER, code:002e, exec, rofimoji
 bind = $mainMod, F, fullscreen
 bind = $mainMod, C, killactive 
 bind = $mainMod, M, exit
 bind = $mainMod,f1, exec, hyprctl kill
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating
-bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, R, exec, wofi --show=drun dmenu
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
 
@@ -101,10 +103,10 @@ bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
+bind = $ctrl, 1, workspace, 5
+bind = $ctrl, 2, workspace, 6
+bind = $ctrl, 3, workspace, 7
+bind = $ctrl, 4, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
@@ -112,10 +114,10 @@ bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod CTRL, 1, movetoworkspace, 5
+bind = $mainMod CTRL, 2, movetoworkspace, 6
+bind = $mainMod CTRL, 3, movetoworkspace, 7
+bind = $mainMod CTRL, 4, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
