--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,9 @@
 monitor=eDP-1,preferred,1366x0,1
 monitor=DP-1,1360x768@60,0x0, 1
- exec-once = hyprpaper & waybar
+exec-once = hyprpaper & waybar
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
+exec-once = hypridle
 
 env = XCURSOR_SIZE,24
 
@@ -24,6 +25,11 @@ input {
 
 # xwayland red border of shame
 windowrulev2=bordercolor rgb(ff0000),xwayland:1
+
+# android studio (yup, also messes with intellij)
+# fix code completion bubbles and other popups
+windowrulev2=float,class:com.intellij.idea.Main
+windowrulev2=noinitialfocus,class:com.intellij.idea.Main
 
 general {
     gaps_in = 5
@@ -123,3 +129,8 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# damn i sure wonder if hollow's config does it :clueless:
+bindlt=,switch:on:Lid Switch,exec,hyprlock
+bindlt=,switch:on:Lid Switch,exec,sleep 1 && systemctl suspend
+
